--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "lowdb": "^1.0.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "shortid": "^2.2.16",
     "swr": "^0.3.9"
   }
 }
